media/pms/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pms
  namespace: media
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pms
    spec:
      volumes:
      - name: pms
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:pms
          targetPortal: nas1-storage.radoncanyon.com
          lun: 0
      - name: gpu-render
        hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
      - name: gpu-card
        hostPath:
          path: /dev/dri/card0
          type: CharDevice
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: transcode
        emptyDir:
          medium: Memory
      containers:
      - name: pms
        image: plexinc/pms-docker:1.13.4.5271-200287a06
        securityContext:
          privileged: true
        volumeMounts:
        - name: pms
          subPath: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: gpu-render
          mountPath: /dev/dri/renderD128
        - name: gpu-card
          mountPath: /dev/dri/card0
        - name: media
          mountPath: /media
          readOnly: true
        ports:
        - name: pms
          containerPort: 32400
        - name: webtools
          containerPort: 33400
        readinessProbe:
          tcpSocket:
            port: pms
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: pms
          initialDelaySeconds: 15
          periodSeconds: 20
        lifecycle:
          postStart:
            exec:
              command: ["/bin/rm", "-f", "/usr/lib/plexmediaserver/Plex Relay"]
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #     - weight: 100
      #       podAffinityTerm:
      #         labelSelector:
      #           matchExpressions:
      #           - key: app
      #             operator: In
      #             values:
      #             - nzbget
      #             - deluge
      #         topologyKey: kubernetes.io/hostname
