media/pms/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pms
  namespace: media
  labels:
    app: pms
    version: v1
spec:
  serviceName: pms
  replicas: 1
  selector:
    matchLabels:
      app: pms
      version: v1
  template:
    metadata:
      labels:
        app: pms
        version: v1
        rclone-mounts: "true"
      annotations:
        ad.datadoghq.com/pms.logs: |
          [
            {
                "type": "file",
                "path": "/mnt/logs/pms/*.log",
                "source": "pms",
                "service": "pms"
            },
            {
                "type": "file",
                "path": "/mnt/logs/pms/*/*.log",
                "source": "pms",
                "service": "pms"
            }
          ]
    spec:
      # nodeName: knode1
      serviceAccountName: pms

      # https://forums.plex.tv/t/request-for-participants-pms-1-23-x-dns-investigation/717155/57
      dnsConfig:
        options:
        - name: ndots
          value: "1"

      containers:
      - &pms
        name: pms
        # IMAGE=ghcr.io/linuxserver/plex; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
        # image: ghcr.io/linuxserver/plex:version-1.41.9.9961-46083195d
        image: alpine
        command: ["sleep"]
        args: ["infinity"]
        resources:
          limits:
            gpu.intel.com/i915: "1"
        ports:
        - name: https
          containerPort: 32400
        volumeMounts:
        - name: pms
          mountPath: /config
        - name: pms-iscsi
          mountPath: /config-iscsi
        - name: tmp
          mountPath: /tmp
        - name: media
          mountPath: /media
          readOnly: false
        - name: logs
          mountPath: /logs-pms
          subPath: pms
      volumes:
      - name: pms
        persistentVolumeClaim:
          claimName: pms-pv-claim
      - name: pms-iscsi
        persistentVolumeClaim:
          claimName: pms-iscsi-pvc
      - name: logs
        persistentVolumeClaim:
          claimName: logs
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: tmp
        emptyDir:
          medium: Memory
