media/pms/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-tailscale
  namespace: media
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - quizzical-queen
  defaultBackend:
    service:
      name: pms
      port:
        name: https
  ingressClassName: tailscale
