media/pms/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pms
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: pms
  ingress:
  - ports:
    - port: 32400
    from: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pms-webtools
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: pms
  ingress:
  - ports:
    - port: 33400
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
