media/pms/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pms-allow-external
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: pms
  ingress:
  - ports:
    - port: 32400
    from: []
